--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
-  command = "npm run build"
+  command = "pnpm install --shamefully-hoist && pnpm run build"
   publish = ".output/public"
+  functions = ".output/server"
 
 [[redirects]]
   from = "/*"
@@ -9,6 +10,8 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  NPM_FLAGS = "--shamefully-hoist=true"
+  PNPM_FLAGS = "--shamefully-hoist=true"
 
 # Serverless functions
 [functions]
