--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 [build]
-  command = "pnpm install --shamefully-hoist && pnpm run build"
+  command = "npm run build"
   publish = ".output/public"
-  functions = ".output/server"
 
 [[redirects]]
   from = "/*"
@@ -10,8 +9,6 @@
 
 [build.environment]
   NODE_VERSION = "18"
-  NPM_FLAGS = "--shamefully-hoist=true"
-  PNPM_FLAGS = "--shamefully-hoist=true"
 
 # Serverless functions
 [functions]
