fix: incorrect .env.example

--- a/.env.example
+++ b/.env.example
@@ -7,18 +7,22 @@ SUPABASE_SERVICE_KEY=your-service-role-key
 STRIPE_SECRET_KEY=sk_test_...
 STRIPE_WEBHOOK_SECRET=whsec_...
 
+TWITTER_CLIENT_ID=your-twitter-client-id-here
+TWITTER_CLIENT_SECRET=your-twitter-client-secret-here
+LINKEDIN_CALLBACK_URL=https://your-domain.netlify.app/api/auth/linkedin/callback
+
 # Twitter/X
-TWITTER_CLIENT_ID=your-client-id
-TWITTER_CLIENT_SECRET=your-client-secret
-TWITTER_CALLBACK_URL=https://your-domain.com/api/auth/twitter/callback
+# TWITTER_CLIENT_ID=your-client-id
+# TWITTER_CLIENT_SECRET=your-client-secret
+# TWITTER_CALLBACK_URL=https://your-domain.com/api/auth/twitter/callback
 
 # Mastodon
 MASTODON_CALLBACK_URL=https://your-domain.com/api/auth/mastodon/callback
 
 # LinkedIn
-LINKEDIN_CLIENT_ID=your-client-id
-LINKEDIN_CLIENT_SECRET=your-client-secret
-LINKEDIN_CALLBACK_URL=https://your-domain.com/api/auth/linkedin/callback
+# LINKEDIN_CLIENT_ID=your-client-id
+# LINKEDIN_CLIENT_SECRET=your-client-secret
+# LINKEDIN_CALLBACK_URL=https://your-domain.com/api/auth/linkedin/callback
 
 # Cron
 CRON_SECRET=your-random-secret-string
