fix: incorrect .env.example

--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,8 @@ SUPABASE_KEY=your-anon-key
 SUPABASE_SERVICE_KEY=your-service-role-key
 
 # Stripe
-STRIPE_SECRET_KEY=sk_test_...
-STRIPE_WEBHOOK_SECRET=whsec_...
-
-TWITTER_CLIENT_ID=your-twitter-client-id-here
-TWITTER_CLIENT_SECRET=your-twitter-client-secret-here
-LINKEDIN_CALLBACK_URL=https://your-domain.netlify.app/api/auth/linkedin/callback
+# STRIPE_SECRET_KEY=sk_test_...
+# STRIPE_WEBHOOK_SECRET=whsec_...
 
 # Twitter/X
 # TWITTER_CLIENT_ID=your-client-id
@@ -17,7 +13,7 @@ LINKEDIN_CALLBACK_URL=https://your-domain.netlify.app/api/auth/linkedin/callback
 # TWITTER_CALLBACK_URL=https://your-domain.com/api/auth/twitter/callback
 
 # Mastodon
-MASTODON_CALLBACK_URL=https://your-domain.com/api/auth/mastodon/callback
+# MASTODON_CALLBACK_URL=https://your-domain.com/api/auth/mastodon/callback
 
 # LinkedIn
 # LINKEDIN_CLIENT_ID=your-client-id
@@ -25,7 +21,7 @@ MASTODON_CALLBACK_URL=https://your-domain.com/api/auth/mastodon/callback
 # LINKEDIN_CALLBACK_URL=https://your-domain.com/api/auth/linkedin/callback
 
 # Cron
-CRON_SECRET=your-random-secret-string
+# CRON_SECRET=your-random-secret-string
 
 # Site
-SITE_URL=https://your-domain.com
+# SITE_URL=https://your-domain.com
