--- a/netlify.toml
+++ b/netlify.toml
@@ -1,16 +1,16 @@
+[build.environment]
+  NODE_VERSION = "20"
+  SECRETS_SCAN_OMIT_KEYS = "SUPABASE_KEY,SUPABASE_SERVICE_KEY,SUPABASE_URL"
+
 [build]
   command = "npm install && npm run build"
   publish = ".output/public"
+
+[functions]
+  node_bundler = "esbuild"
+  directory = ".output/server"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-
-[build.environment]
-  NODE_VERSION = "20"
-
-# Serverless functions
-[functions]
-  node_bundler = "esbuild"
-  directory = ".output/server"
