fix: Configure Netlify secrets scanning to allow Supabase keys

--- a/netlify.toml
+++ b/netlify.toml
@@ -7,8 +7,7 @@
   publish = ".output/public"
 
 [functions]
-  node_bundler = "esbuild"
-  directory = ".output/server"
+  directory = ".netlify/functions-internal"
 
 [[redirects]]
   from = "/*"
