--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
 
 [build]
   command = "npm install && npm run build"
-  publish = ".output/public"
+  publish = "dist"
 
 [functions]
   directory = ".netlify/functions-internal"
