--- a/netlify.toml
+++ b/netlify.toml
@@ -4,12 +4,4 @@
 
 [build]
   command = "npm install && npm run build"
-  publish = "dist"
-
-[functions]
-  directory = ".netlify/functions-internal"
-
-[[redirects]]
-  from = "/*"
-  to = "/.netlify/functions/server"
-  status = 200
+  publish = ".output/public"
