--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,12 @@
 [build]
   command = "npm install && npm run build"
   publish = "dist"
+
+[functions]
+  directory = "dist/server"
+  node_bundler = "esbuild"
+
+[[redirects]]
+  from = "/*"
+  to = "/.netlify/functions/server"
+  status = 200
