--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,7 @@
 [build]
   command = "npm install && npm run build"
   publish = "dist"
+  functions = "dist/server"
 
 [[redirects]]
   from = "/*"
