--- a/netlify.toml
+++ b/netlify.toml
@@ -3,11 +3,10 @@
   SECRETS_SCAN_OMIT_KEYS = "SUPABASE_KEY,SUPABASE_SERVICE_KEY,SUPABASE_URL"
 
 [build]
-  command = "npm install && npm run build"
+  command = "npm run generate"
   publish = "dist"
-  functions = "dist/server"
 
 [[redirects]]
   from = "/*"
-  to = "/.netlify/functions/server"
+  to = "/index.html"
   status = 200
