--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,11 @@
   publish = "dist"
 
 [[redirects]]
-  from = "/*"
+  from = "/api/*"
   to = "/.netlify/functions/server"
+  status = 200
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
   status = 200
