fix: Add force and splat to API redirect

--- a/netlify.toml
+++ b/netlify.toml
@@ -8,8 +8,9 @@
 
 [[redirects]]
   from = "/api/*"
-  to = "/.netlify/functions/server"
+  to = "/.netlify/functions/server/:splat"
   status = 200
+  force = true
 
 [[redirects]]
   from = "/*"
