--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@supabase/supabase-js": "^2.39.0",
     "mastodon-api": "^1.3.0",
     "nuxt": "^3.14.0",
+    "sharp": "^0.34.5",
     "stripe": "^14.0.0",
-    "twitter-api-v2": "^1.15.0",
     "vue": "^3.5.0",
     "vue-router": "^4.4.0"
   },
