--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@atproto/api": "^0.12.0",
+    "@netlify/functions": "^5.1.2",
     "@nuxtjs/supabase": "^1.1.5",
     "@supabase/supabase-js": "^2.39.0",
     "mastodon-api": "^1.3.0",
