--- a/netlify.toml
+++ b/netlify.toml
@@ -4,12 +4,13 @@
 
 [build]
   command = "npm run build"
-  publish = "dist"
+  publish = ".output/public"
 
 [[redirects]]
   from = "/*"
-  to = "/.netlify/functions/server"
+  to = "/.netlify/functions/server/:splat"
   status = 200
+  force = true
 
 [functions]
   directory = ".netlify/functions-internal"
