--- a/netlify.toml
+++ b/netlify.toml
@@ -4,15 +4,7 @@
 
 [build]
   command = "npm run build"
-  publish = "dist"
+  publish = ".output/public"
 
 [functions]
   directory = ".netlify/functions-internal"
-
-[[redirects]]
-  from = "/*"
-  to = "/.netlify/functions/server/:splat"
-  status = 200
-
-
-
